	* screenio.c (adjust_attr_from_extended_color): new function directly
	  handling the attribute adjustment, replaced (has_extended_color)
	* screenio.c (handle_control_field_color, get_cob_color_from_color_value):
	  new functions to get COBOL color number from text and handling it
	* common.h (cob_colors): changed color defines to enum
	* move.c: fix some compiler warnings by explicit casts

2023-05-10  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (adjust_attr_from_color_field,
	  adjust_attr_from_control_field): new functions to adjust screenio
	  attributes during runtime via COLOR and CONTROL fields
	  (later function mostly a stub with minimal "parsing" so far)
	* screenio.c (cob_screen_attr): refactor to read colors first, allowing
	  later override via new functions
	* screenio.c (cob_screen_set_mode, cob_screen_line_col): minor refactoring

2023-05-09  Simon Sobisch <simonsobisch@gnu.org>

	* cconv.c (cob_field_to_string): moved from common.c
	* cconv.c (cob_init_cconv), coblocal.h, common.c: added
	* cconv.c (cob_toupper, cob_tolower, cob_init_cconv), coblocal.h:
	  included (copy from cobc/reserved.c)
	* coblocal.h (enum cob_case_modifier): new enum to select case-adjustment
	* cconv.c (cob_field_to_string), coblocal.h: adjusted function signature,
	  allowing for optional change of case during copy and returning the size
	  to process or negative error values in case of "no data to process"
	* cconv.c (cob_field_to_string): return error if truncating would be
	  necessary
	* reportio.c, intrinsic.c, fileio.c, common.c, call.c: adjusted for new
	  signature of cob_field_to_string
	* intrinsic.c (locale_time, cob_intr_locale_date, cob_intr_locale_compare):
	  always use full locale string passed, error handling improved
	* common.c (cob_set_locale, cob_get_environment, cob_display_env_value):
	  use local buffer, error handling improved

	FR #189 + FR #355 - runtime-adjustable attributes for extended screenio